multilang-schema-registry/shared/test/avro/negative/full/account_v2.avsc
{
  "type": "record",
  "name": "Account",
  "namespace": "com.amazonaws.services.schemaregistry.test.full.negative",
  "doc": "Schema v2 violates FULL compatibility by adding required field (COMPAT-040)",
  "fields": [
    {
      "name": "accountId",
      "type": "string",
      "doc": "Account identifier"
    },
    {
      "name": "balance",
      "type": "double",
      "doc": "Account balance"
    },
    {
      "name": "status",
      "type": {
        "type": "enum",
        "name": "AccountStatus",
        "symbols": ["ACTIVE", "INACTIVE", "SUSPENDED"]
      },
      "doc": "Account status"
    },
    {
      "name": "metadata",
      "type": ["null", {
        "type": "map",
        "values": "string"
      }],
      "default": null,
      "doc": "Optional metadata"
    },
    {
      "name": "requiredNewField",
      "type": "string",
      "doc": "Required field addition violates FULL compatibility - not backward compatible"
    }
  ]
}
